--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 {
 "version":"1.0",
 "changelog":"Testing langs hehe",
-"link":"https://youtube.com/c/YomaSoou"
+"link":"https://youtube.com/c/YomaSoou",
+"tutorial":"https://youtu.be/zXPoC7Lktto"
 }
 ]
