--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 {
 "version":"1.0",
 "changelog":"Testing langs hehe",
-"link":"https://youtube.com/c/YomaSoou",
+"link":"https://youtu.be/kIetH5s8VOA",
 "tutorial":"https://youtu.be/zXPoC7Lktto"
 }
 ]
