--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 [
 {
-"version":"1.1",
+"version":"1.2",
 "changelog":"Testing langs hehe",
-"link":"https://youtu.be/kIetH5s8VOA",
+"link":"https://youtu.be/T_0FSg7dRcI",
 "tutorial":"https://youtu.be/zXPoC7Lktto"
 }
 ]
