--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 "version":"1.2",
 "changelog":"Testing langs hehe",
 "link":"https://youtu.be/T_0FSg7dRcI",
-"tutorial":"https://youtu.be/zXPoC7Lktto"
+"tutorial":"https://youtu.be/Dnfs9t-Uynk"
 }
 ]
