--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 {
 "version":"1.2",
 "changelog":"Testing langs hehe",
-"link":"https://youtu.be/T_0FSg7dRcI",
+"link":"https://youtu.be/humPoiihAo8",
 "tutorial":"https://youtu.be/Dnfs9t-Uynk"
 }
 ]
