--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 [
 {
-"version":"1.3",
-"changelog":"Testing langs hehe",
+"version":"1.4",
+"changelog":"Dati ka bang Hatdog?",
 "link":"https://youtu.be/humPoiihAo8",
 "tutorial":"https://youtu.be/Dnfs9t-Uynk"
 }
